Fixed layout problem

--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,7 @@
 .half-width {
   width: 49%;
   display: inline-block;
+  vertical-align: top;
 }
 
 .right-half img {
